@@ -23,8 +23,9 @@ import org.apache.streampipes.extensions.api.declarer.IExtensionModuleExport;
 import org.apache.streampipes.extensions.api.migration.IModelMigrator;
 import org.apache.streampipes.extensions.api.pe.IStreamPipesPipelineElement;
 import org.apache.streampipes.extensions.connectors.filewatcher.adapter.WinCCAlarmArchiveAdapter;
+import org.apache.streampipes.extensions.connectors.filewatcher.migration.WinCCAlarmArchiveAdapterMigrationV1;
+import org.apache.streampipes.extensions.connectors.filewatcher.migration.WinCCAlarmArchiveAdapterMigrationV2;
 
-import java.util.Collections;
 import java.util.List;
 
 public class FileWatcherConnectorsModuleExport implements IExtensionModuleExport {
@@ -36,11 +37,11 @@ public class FileWatcherConnectorsModuleExport implements IExtensionModuleExport
 
   @Override
   public List<IStreamPipesPipelineElement<?>> pipelineElements() {
-    return Collections.emptyList();
+    return List.of();
   }
 
   @Override
   public List<IModelMigrator<?, ?>> migrators() {
-    return Collections.emptyList();
+    return List.of(new WinCCAlarmArchiveAdapterMigrationV1(), new WinCCAlarmArchiveAdapterMigrationV2());
   }
 }
